@@ -264,7 +264,7 @@ function arg_st = __print_parse_opts__ (varargin)
     arg_st.devopt = "pdfwrite";
   endif
 
-  persistent dev_list = [{"aifm", "corel", "fig", "png", "jpeg", ...
+  persistent dev_list = [{"aifm", "corel", "dumb", "fig", "png", "jpeg", ...
               "gif", "pbm", "pbmraw", "dxf", "mf", ...
               "svg", "hpgl", "ps", "ps2", "psc", ...
               "psc2", "eps", "eps2", "epsc", "epsc2", ...
@@ -279,7 +279,7 @@ function arg_st = __print_parse_opts__ (varargin)
               "epswrite", "eps2write", "pswrite", "ps2write", "pdfwrite", ...
               "canvas", "cgm", "latex", "eepic"}, gl_devlist];
 
-  persistent suffixes = [{"ai", "cdr", "fig", "png", "jpg", ...
+  persistent suffixes = [{"ai", "cdr", "txt", "fig", "png", "jpg", ...
               "gif", "pbm", "pbm", "dxf", "mf", ...
               "svg", "hpgl", "ps", "ps", "ps", ...
               "ps", "eps", "eps", "eps", "eps", ...
